--- a/exercícios/desafios/d11/estilo/style.css
+++ b/exercícios/desafios/d11/estilo/style.css
@@ -1,8 +1,15 @@
 @charset "UTF-8";
-/* configurações gerais*/
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap')
+
+:root {
+    --fonte1:
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    
 }
 
 html,body {
