--- a/exercícios/desafios/d11/estilo/style.css
+++ b/exercícios/desafios/d11/estilo/style.css
@@ -1,20 +1,28 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
-    --fonte1:
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", sans-serif;
+    --fonte3: "Sriracha", cursive;
+    
 }
 
+/* Configuração geral*/
 * {
     margin: 0px;
-    padding: 0px;
+    padding: 0px;  
+    font-size: 1em;
     
 }
 
 html,body {
     min-height: 100vh; /* o tamanho do corpo do body html o vh é a altura*/
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -23,9 +31,11 @@ header {
     text-align: center;
 }
 
-header {
+header > h1 {
     padding-top: 50px; /*top em cima*/
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 4em;
 }
 
 header > p {
@@ -47,6 +57,9 @@ section {
     padding-bottom: 10vh;
     line-height: 2em; /* espaço entre as linhas */
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
+    
 }
 
 section.normal {
@@ -60,7 +73,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
