--- a/exercícios/ex24/estilos/social.css
+++ b/exercícios/ex24/estilos/social.css
@@ -6,8 +6,11 @@
             padding: 0px;
             font-family: Arial, Helvetica, sans-serif;
         }
-
-        ::-webkit-scrollbar { /*  serve para tirar a barra de rolagem do inframe */
+         
+        /*  serve para tirar a barra de rolagem do inframe */
+        ::-webkit-scrollbar { 
+            width: ;
+            height:  ;
            
         }
 
