--- a/exercícios/ex24/estilos/style.css
+++ b/exercícios/ex24/estilos/style.css
@@ -38,7 +38,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 267px;
+    width: 269px;
     height: 471px;
 }
 
@@ -58,5 +58,5 @@ section#redes-sociais img:hover {
     border: 2px solid rgba(255, 255, 255, 0.603);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
-    transform: transform .3s;
+    transition: transform .3s;
 }
