--- a/exercícios/ex24/estilos/social.css
+++ b/exercícios/ex24/estilos/social.css
@@ -1,6 +1,5 @@
 @charset "UTF-8"
 
-<style>
         * {
             margin: 0px;
             padding: 0px;
@@ -10,22 +9,27 @@
         /*  serve para tirar a barra de rolagem do inframe */
         ::-webkit-scrollbar { 
             width: ;
-            height:  ;
+            height: ;
            
         }
-
+        /* onde eu configuro as imagens de cada rede social */
         img {
             width: 100vw;
+            
         }
 
         a {
             display: block;
             background-color: darkred;
             color: white;
-            padding: 20px;
+            padding: 10px;
             text-align: center;
             font-weight: bolder;
             text-decoration: none;
         }
 
-    </style>
+        a:hover {
+            background-color: red;
+        }
+
+    
