--- a/exercícios/ex24/estilos/social.css
+++ b/exercícios/ex24/estilos/social.css
@@ -8,8 +8,8 @@
          
         /*  serve para tirar a barra de rolagem do inframe */
         ::-webkit-scrollbar { 
-            width: ;
-            height: ;
+            width: 0px ;
+            height: 0px ;
            
         }
         /* onde eu configuro as imagens de cada rede social */
@@ -22,10 +22,11 @@
             display: block;
             background-color: darkred;
             color: white;
-            padding: 10px;
+            padding: 20px;
             text-align: center;
             font-weight: bolder;
             text-decoration: none;
+            
         }
 
         a:hover {
