--- a/exercícios/ex24/estilos/style.css
+++ b/exercícios/ex24/estilos/style.css
@@ -6,7 +6,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+html {
     height: 100vh;
     width: 100vw;
     background-color: black;
