--- a/exercícios/ex26/mq5/estilos/style.css
+++ b/exercícios/ex26/mq5/estilos/style.css
@@ -20,8 +20,22 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+span#cardápio {
+    background-color: rgb(48, 48, 48);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#cardápio:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none; /* desaparecer as opções */
 }
 
 menu > ul {
