--- a/exercícios/ex26/mq4/estilos/style.css
+++ b/exercícios/ex26/mq4/estilos/style.css
@@ -1,52 +1,78 @@
 @charset "UTF-8";
 
-/* Versão Mobile First */
-
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
+   
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
 }
 
-/* tirando o seletor body deixando apenas o html tira a barra de rolagem */
- html {
-    width: 100vw;
-    height: 100vh; 
-
+body {
+    background-color: lightgrey;
 }
- body {
-    background: black url(../imagens/back-phone.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
- }
 
- main {
-    background-color: rgba(255, 255, 255, 0.842);
-    width: 80vw;
-    margin: auto;
-    margin-top: 20px;
-    border-radius: 10px;
+header {
+    background-color: rgb(145, 145, 145);
+}
+
+header > h1 {
     padding: 10px;
-}
-
-h1 {
     text-align: center;
+}
+
+span#cardápio {
+    background-color: rgb(48, 48, 48);
     color: white;
-    font-size: 2em;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.493);
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#cardápio:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none; /* desaparecer as opções */
+}
+
+menu > ul {
+    list-style-type: none;
+   
+}
+
+menu > ul > li > a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(87, 87, 87);
+    color: white;
+    border-top: 2px solid gray;
 
 }
- 
-img {
-    display: block;
+
+menu > ul > li > a:hover {
+    background-color: gray;
+}
+
+main {
+    width: 90vw;
+    background-color: white;
     margin: auto;
- }
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
 
- img#phone { display: block; }
- img#tablet { display: none; }
- img#print { display: none; }
- img#pc { display: none; }
- img#tv { display: none; }
+article > h2 {
+    padding-bottom: 20px;
+}
 
+article > p {
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
+}
